tests/compile-fail/trait_obj_value_self.stderr
error[E0277]: the size for values of type `dyn Trait` cannot be known at compilation time
  --> $DIR/trait_obj_value_self.rs:12:5
   |
9  | fn assert_impl<T: Trait>() {}
   |                   ----- required by this bound in `assert_impl`
...
12 |     assert_impl::<Box<dyn Trait>>();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `dyn Trait`
   = note: required because of the requirements on the impl of `Trait` for `Box<dyn Trait>`
